2010-01-12  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Support injection of inspector scripts into the inspected context.

        https://bugs.webkit.org/show_bug.cgi?id=33523

        * bindings/v8/custom/V8InjectedScriptHostCustom.cpp:
        (WebCore::WeakReferenceCallback):
        (WebCore::createInjectedScriptHostV8Wrapper):
        (WebCore::createInjectedScript):
        (WebCore::InjectedScriptHost::injectedScriptFor):

2010-01-12  Ben Murdoch  <benm@google.com>

        Reviewed by Darin Adler.

        Form Reset : Press Back Button and Reset , TextareaElemnt is not set to Default Value
        https://bugs.webkit.org/show_bug.cgi?id=31539

        Added manual test: manual-tests/textarea-reset-default-value.html.

        * html/HTMLTextAreaElement.cpp:
        (WebCore::HTMLTextAreaElement::restoreFormControlState): set the value, rather than default value of a text area when restoring its state. This allows resetting a form with a textarea to work correctly after its state has been restored.
        * manual-tests/resources/textarea-form-back-on-submit.html: Added.
        * manual-tests/textarea-reset-default-value.html: Added.

2010-01-12  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Holger Freyther.

        [Qt] WebCore::Path allocates QPainterPath unnecessarily on the heap
        https://bugs.webkit.org/show_bug.cgi?id=33466

        WebCore::Path is a pointer to a PlatformPath. In case of Qt that's a
        QPainterPath, which itself is a pointer to the elements (QVector).
        That creates unecessary allocations in PathQt.cpp.

        Replaced the "PlatformPath* m_path;" with a PlatformPathPtr, which
        is a plain QPainterPath.

        * platform/graphics/Path.h:
        (WebCore::Path::platformPath):
        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::drawFilledShadowPath):
        (WebCore::GraphicsContext::fillPath):